--- a/META.yml
+++ b/META.yml
@@ -2,23 +2,31 @@
 abstract: 'Portably create pipe() or pipe-like handles, one way or another.'
 author:
   - 'Rocco Caputo <rcaputo@cpan.org>'
-build_requires: {}
+build_requires:
+  Carp: 1.26
+  Scalar::Util: 1.29
+  Test::More: 0.98
+  perl: 5.004
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300020, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.132140'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: IO-Pipely
 requires:
-  Errno: 1.09
-  Fcntl: 0
-  IO::Socket: 0
-  Symbol: 0
-  Test::More: 0
+  Exporter: 5.68
+  Fcntl: 1.06
+  IO::Socket: 1.31
+  Symbol: 1.06
+  base: 2.18
+  strict: 0
+  warnings: 0
 resources:
-  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=IO-Pipely
+  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=IO-Pipely
+  homepage: http://search.cpan.org/dist/IO-Pipely/
+  license: http://dev.perl.org/licenses/
   repository: git://github.com/rcaputo/io-pipely.git
-version: 0.002
+version: 0.005
